--- a/client/default/less/widgets/activityScreen.less
+++ b/client/default/less/widgets/activityScreen.less
@@ -317,7 +317,9 @@
                 }
             }
 
-            p {white-space: nowrap;margin-left: -50px;}
+            p {
+                margin-left: -50px;
+            }
         }
 
         #details {
