--- a/client/default/less/widgets/foodometer.less
+++ b/client/default/less/widgets/foodometer.less
@@ -571,7 +571,7 @@
                 }
             }
 
-            p {white-space: nowrap;margin-left: -20px;}
+            p {margin-left: -20px;}
         }
 
         #details {
